--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "swr": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
