--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
-    "swr": "^1.0.1"
+    "swr": "^1.0.1",
+    "tint-shade-color": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
